--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="utf-8"/>
     <title>Пример сайта</title>
     <link rel="stylesheet" href="style.css">
+    <!--S-->
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+      /> 
+    <!--S-->
 </head>
 <body>
     <header>
@@ -70,6 +80,15 @@
                     <a href="">КОНТАКТЫ</a>
                 </li>
             </ul>
+            <!-- Соня, комменты чтобы знать где я что-то испортила-->
+            <div class="col-md-6">
+                <h1 class="page-title">Разработка сайтов от лучшего Drupal агентства России</h1>
+                <div class="support-main-description">
+                    17 лет создаём и дорабатываем <br>
+                    мощные сайты на Drupal
+                </div>
+            </div>
+            <!--S-->
         </div>
         <div class="video-wrapp">
             <div class="video-block">
